# concepts-python

OO/: conceito-de-classe.excalidraw
OO/classes/: area.py  carro.py  pessoa.py
OO/classes/abstrato/: atendente.py
OO/classes/encapsulamento/: funcionario.py  funcionario2.py
OO/classes/heranca/: animal.py
arquivos/: escrita.py  leitura.py  listar.py
arquivos/palavras_mais_usadas/: palavras-mais-usadas.py
arquivos/textos/: texto_01.txt
conceitos_python/: pyvenv.cfg
erros/: basico-1.py  basico-2.py  senha-forte.py
funcional/: all.py  any.py  basico-1.py  basico-2.py  basico-3.py  filter-1.py  filter-2.py  map-1.py  map-2.py  map-3.py  reduce.py  zip.py
http/: README.excalidraw  pyproject.toml  testes_http.py
langChain/: 01.py  02.py  03.py  04.py  05.py  06.py  README.md  ipca.db  ipca_scraper.py
modulos_pacotes/: main.py
modulos_pacotes/model/: email.py  nome_pessoa.py  usuario.py
modulos_pacotes/utils/: validador.py
nov61327/: .coverage
openAI/: README.md
openAI/assistentes/: pyproject.toml
openAI/chatagpt-basico/: pyproject.toml  resposta.json
openAI/chatagpt-basico/exemplos/: basico.py  chat-pao-de-queijo.py  funcoes.py  parametro-json.py  parametros-1.py  parametros-2.py  projeto-emails.py  stream.py
openAI/chatagpt-basico/output/: email.txt
openAI/embedding/: pyproject.toml
openAI/embedding/exemplos/: conceito.py  criar.py  pesquisa.py  recomendacao.py
openAI/fine-tunning/: pyproject.toml
openAI/imagens/: pyproject.toml
openAI/moderacao/: pyproject.toml
openAI/moderacao/exemplos/: mode-basica.py  modelos.py  verificador-texto.py
openAI/moderacao/output/: latest.json  stable.json
openAI/utils/: pyproject.toml
openAI/voz/: pyproject.toml
openAI/voz/exemplos/: chat-voz.py  speech-to-text.py  text-to-speech-parametros.py  text-to-speech.py  traducao.py
poetry/: REDME.md  setup.py
poetry/bagulho/: pyproject.toml
poetry/meu_pacote.egg-info/: PKG-INFO
(+30 files in other folders)
