[tool.poetry]
name = "voz"
version = "0.1.0"
description = ""
authors = ["maryson011 <maryson011@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
utils = {path="../utils", develop=true}
pydub = "^0.25.1"
sounddevice = "^0.5.1"
soundfile = "^0.12.1"
numpy = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
